// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should provide theme object 1`] = `
<DocumentFragment>
  <div>
    {"50":"#ebf8ff","100":"#bee3f8","200":"#90cdf4","300":"#63b3ed","400":"#4299e1","500":"#3182ce","600":"#2b6cb0","700":"#2c5282","800":"#2a4365","900":"#1A365D"}
  </div>
</DocumentFragment>
`;

exports[`should render default slot 1`] = `
<DocumentFragment>
  <div
    data-testid="child"
  >
    Test child element
  </div>
</DocumentFragment>
`;
